feat: upgrade with rootstock on localhost

--- a/environments/.env.local
+++ b/environments/.env.local
@@ -9,15 +9,17 @@ SITE_DESCRIPTION="zkSync Checkout helps anyone permission-less adopt checkout ba
 SITE_KEYWORDS="zkSync, Checkout, send payments in crypto, add payment gateway, cryptopayments, defi,Matter Labs, rollup, ZK rollup, zero confirmation, ZKP,
 zero-knowledge proofs, Ethereum, crypto, blockchain, permissionless, L2, secure payments, scalable crypto payments"
 GTAG_ID=GTM-P9S4QSF
-ZK_NETWORK="ropsten-beta"
 
 APP_INFURA_API_KEY=f60769ea380544dfa0d2c28bdf869a38
 APP_ONBOARDING_APP_ID=c4b83f7e-9bea-40d8-ad61-539f800863ee
 APP_FORTMATIC=pk_test_6CCD7EB1D7A9D0DB
 APP_PORTIS=68099bdc-3de9-4adc-ace0-e4664c1e77b4
-APP_CURRENT_NETWORK=ropsten
-ZK_NETWORK="ropsten-beta"
+APP_CURRENT_NETWORK=localhost
+ZK_NETWORK="localhost"
+
+UNS_KEY=356a3eb3-d413-490a-94ac-4c9bb312ff49
 
 RAMP_MAINNET_HOST_API_KEY=j3b3oszn2vsr4qkz4att67zrucm6m6yjpfvxvtyy
-RAMP_RINKEBY_HOST_API_KEY=pcrtzve8ax7vjamoct77ombequtqhuxbc8wdknwg
-RAMP_ROPSTEN_HOST_API_KEY=85quy9gjwceh3rnca2nffo6wq67q776u6rjkyajf
+RAMP_GOERLI_HOST_API_KEY=pcrtzve8ax7vjamoct77ombequtqhuxbc8wdknwg
+RAMP_SEPOLIA_HOST_API_KEY=85quy9gjwceh3rnca2nffo6wq67q776u6rjkyajf
+
