--- a/firebase.json
+++ b/firebase.json
@@ -39,45 +39,7 @@
       ]
     },
     {
-      "target": "prod-rinkeby",
-      "public": "public",
-      "ignore": [
-        "firebase.json",
-        "**/.*",
-        "**/node_modules/**"
-      ],
-      "rewrites": [
-        {
-          "source": "**",
-          "destination": "/index.html"
-        }
-      ],
-      "headers": [
-        {
-          "source": "**",
-          "headers": [
-            {
-              "key": "Referrer-Policy",
-              "value": "no-referrer, strict-origin-when-cross-origin"
-            },
-            {
-              "key": "X-Content-Type-Options",
-              "value": "nosniff"
-            },
-            {
-              "key": "X-Frame-Options",
-              "value": "DENY"
-            },
-            {
-              "key": "X-XSS-Protection",
-              "value": "1; mode=block"
-            }
-          ]
-        }
-      ]
-    },
-    {
-      "target": "prod-ropsten",
+      "target": "prod-goerli",
       "public": "public",
       "ignore": [
         "firebase.json",
