--- a/package.json
+++ b/package.json
@@ -120,15 +120,15 @@
   },
   "scripts": {
     "local": "yarn ci:env 'local' 'dev' 1 1",
-    "goerli": "yarn ci:env 'goerli' 'dev' 1 1",
+    "testnet": "yarn ci:env 'testnet' 'dev' 1 1",
     "dev": "yarn local && nuxt --open --port 3333",
     "generate": "nuxt generate ",
     "start": "yarn local && nuxt start",
     "build": "yarn local && nuxt build",
     "ci:build:mainnet": "yarn ci:prepare:mainnet && yarn generate --fail-on-error",
-    "ci:build:goerli": "yarn ci:prepare:goerli && yarn generate --fail-on-error",
+    "ci:build:testnet": "yarn ci:prepare:testnet && yarn generate --fail-on-error",
     "ci:env": "sh cli-process-env.sh",
-    "ci:prepare:goerli": "yarn ci:env 'goerli' 'prod' 1",
+    "ci:prepare:testnet": "yarn ci:env 'testnet' 'prod' 1",
     "ci:prepare:mainnet": "yarn ci:env 'mainnet' 'prod' 1",
     "format:prettier": "prettier --config .prettierrc --ignore-path .prettierignore --write ./src/**/*.{ts,vue,js,scss,css}",
     "lint:spell-check": "cspell src/**/*.{ts,vue,js} README.md",
