--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -1,35 +1,35 @@
-name: "Deploy preview"
-"on": pull_request
-jobs:
-  build_and_preview:
-    if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
-    runs-on: ubuntu-latest
-    environment: dev
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: "Enable yarn cache"
-        uses: c-hive/gha-yarn-cache@v2  # using cache
-
-      - name: "Setup node@14"
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14
-
-      - name: "Install dependencies"
-        run: |
-          yarn set version 3.1.1
-          yarn install
-
-      - name: "Build: dapp"
-        run: yarn run ci:build:rinkeby
-
-      - name: "Deploy: preview"
-        uses: matter-labs/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZSYNC_DAPP_CHECKOUT_DEV }}"
-          target: staging
-          projectId: zsync-dapp-checkout
-        env:
-          FIREBASE_CLI_PREVIEWS: hostingchannels
+#name: "Deploy preview"
+#"on": pull_request
+#jobs:
+#  build_and_preview:
+#    if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
+#    runs-on: ubuntu-latest
+#    environment: dev
+#    steps:
+#      - uses: actions/checkout@v2
+#
+#      - name: "Enable yarn cache"
+#        uses: c-hive/gha-yarn-cache@v2  # using cache
+#
+#      - name: "Setup node@14"
+#        uses: actions/setup-node@v2
+#        with:
+#          node-version: 14
+#
+#      - name: "Install dependencies"
+#        run: |
+#          yarn set version 3.1.1
+#          yarn install
+#
+#      - name: "Build: dapp"
+#        run: yarn run ci:build:rinkeby
+#
+#      - name: "Deploy: preview"
+#        uses: matter-labs/action-hosting-deploy@v0
+#        with:
+#          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+#          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZSYNC_DAPP_CHECKOUT_DEV }}"
+#          target: staging
+#          projectId: zsync-dapp-checkout
+#        env:
+#          FIREBASE_CLI_PREVIEWS: hostingchannels
