--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -1,33 +1,33 @@
-name: "Deploy staging"
-"on":
-  push:
-    branches: [ main ]
-jobs:
-  build_and_deploy:
-    if: ${{ github.event.repository.full_name == github.repository }}
-    runs-on: ubuntu-latest
-    environment: dev
-    steps:
-      - uses: actions/checkout@v2
-      - name: "Enable yarn cache"
-        uses: c-hive/gha-yarn-cache@v2  # using cache
-
-      - name: "Setup node@14"
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14
-
-      - name: "Install dependencies"
-        run: |
-          yarn set version 3.1.1
-          yarn install
-
-      - name: "Deploy target: rinkeby"
-        run: yarn run ci:build:rinkeby
-      - uses: matter-labs/action-hosting-deploy@v0
-        with:
-          repoToken: "${{ secrets.GITHUB_TOKEN }}"
-          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZSYNC_DAPP_CHECKOUT_DEV }}"
-          target: staging
-          projectId: zsync-dapp-checkout
-          channelID: live
+#name: "Deploy staging"
+#"on":
+#  push:
+#    branches: [ main ]
+#jobs:
+#  build_and_deploy:
+#    if: ${{ github.event.repository.full_name == github.repository }}
+#    runs-on: ubuntu-latest
+#    environment: dev
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: "Enable yarn cache"
+#        uses: c-hive/gha-yarn-cache@v2  # using cache
+#
+#      - name: "Setup node@14"
+#        uses: actions/setup-node@v2
+#        with:
+#          node-version: 14
+#
+#      - name: "Install dependencies"
+#        run: |
+#          yarn set version 3.1.1
+#          yarn install
+#
+#      - name: "Deploy target: rinkeby"
+#        run: yarn run ci:build:rinkeby
+#      - uses: matter-labs/action-hosting-deploy@v0
+#        with:
+#          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+#          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZSYNC_DAPP_CHECKOUT_DEV }}"
+#          target: staging
+#          projectId: zsync-dapp-checkout
+#          channelID: live
