--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -24,6 +24,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: '14'
+    
+    - name: Set yarn version
+      run: yarn set version 3.1.1
 
     - name: Install dependencies
       run: |
