fix: small change

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -25,8 +25,8 @@ jobs:
       with:
         node-version: '14.21.3'
     
-    # - name: Set yarn version
-    #   run: yarn set version 3.1.1
+    - name: Set yarn version
+      run: yarn set version 3.5.1
 
     - name: Install dependencies
       run: |
