--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@matterlabs/zksync-dapp-checkout",
-  "title": "zkSync Checkout — simple permissionless DeFi payment gateway",
-  "homepage": "https://checkout.zksync.io",
-  "description": "zkSync Checkout helps anyone permission-less adopt checkout backed by zkSync, receive payments automatically and benefit from all the advantage of zkSync Rollup: speed of the transaction, times lower cost of a single transaction, simplicity of withdrawal fund to the onchain-wallet.",
+  "name": "@rsksmart/rollup-dapp-checkout",
+  "title": "Rollup Checkout — simple permissionless DeFi payment gateway",
+  "homepage": "https://checkout.dev.aggregation.rifcomputing.net/",
+  "description": "Rollup Checkout helps anyone permission-less adopt checkout backed by RIF Rollup, receive payments automatically and benefit from all the advantage of RIF Rollup: speed of the transaction, times lower cost of a single transaction, simplicity of withdrawal fund to the onchain-wallet.",
   "version": "3.6.7",
   "keywords": [
     "zksync",
@@ -35,7 +35,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/matter-labs/zksync-dapp-checkout.git"
+    "url": "https://github.com/rsksmart/rif-rollup-dapp-checkout"
   },
   "engines": {
     "node": ">=14"
@@ -46,9 +46,6 @@
     "not < 1%",
     "IE 11"
   ],
-  "bugs": {
-    "url": "https://linear.app/matterlabs/project/zkcheckout-eae8f3c3e539/ZKF"
-  },
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.1.0",
     "core-js": "^3.15.1",
